Correct alignment of back button on members page

--- a/src/app.css
+++ b/src/app.css
@@ -671,7 +671,7 @@ fieldset {
 	padding: 1.5rem 1.5rem 0;
 }
 
-.content-header a {
+.content-header a, .content-header button {
 	float: right;
 }
 
